addons/security/addons/logging-nginx-ingress-security.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

# The opensearch-dashboards service exposes a web application on port 5601
# It is uses a very tricky design to solve the problem of relative paths:
# in the deployment.yaml, we configure these environment variables:
# SERVER_BASEPATH = "/logging": the application will generate all relative
#    URLs starting with this prefix!
# SERVER_REWRITEBASEPATH = "true": the application will expect the
# incoming calls to be part of the request path (needed for port forwarding)
---
# this ingress will be merged with ingress provided in:
# addons/ingress/nginx/manifests/cluster-net-ingress.yaml
# and exposes the opensearch-dashboards web application on:
# https://k2s.cluster.local/logging/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-nginx-cluster-local
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/auth-url: "https://k2s.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://k2s.cluster.local/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
            path: /logging/?(.*)
            pathType: Prefix
